--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,8 @@
+before_script:
+  - apk update
+  - apk upgrade
+  - apk add bash
+
 update-server:
   script:
     - mkdir ~/.ssh; echo ${PRIV_KEY} > ~/.ssh/id_rsa
