fix ssh permissions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,5 @@ update-server:
     - mkdir ~/.ssh
     - chmod 700 ~/.ssh
     - echo ${PRIV_KEY} > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
     - bash ./thing.bash
