remove home dir

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ before_script:
 
 update-server:
   script:
-    - mkdir ~/.ssh
-    - chmod 700 ~/.ssh
-    - echo ${PRIV_KEY} > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
+    - mkdir .ssh
+    - chmod 700 .ssh
+    - echo ${PRIV_KEY} > .ssh/id_rsa
+    - chmod 600 .ssh/id_rsa
     - bash ./thing.bash
