Start with gunicorn

--- a/end-to-end-server-stuffs/server-stuffs/development.ini
+++ b/end-to-end-server-stuffs/server-stuffs/development.ini
@@ -25,7 +25,13 @@ sqlalchemy.url = sqlite:///%(here)s/server-stuffs.sqlite
 ###
 
 [server:main]
-use = egg:waitress#main
+use = egg:gunicorn#main
+bind = unix:/var/run/app.sock
+workers = 3
+preload = true
+reload = true
+accesslog = -
+loglevel = debug
 listen = localhost:6543
 
 ###
