--- a/end-to-end-server-stuffs/server-stuffs/production.ini
+++ b/end-to-end-server-stuffs/server-stuffs/production.ini
@@ -15,7 +15,13 @@ pyramid.default_locale_name = en
 sqlalchemy.url = sqlite:///%(here)s/server-stuffs.sqlite
 
 [server:main]
-use = egg:waitress#main
+use = egg:gunicorn#main
+bind = unix:/var/run/app.sock
+workers = 3
+preload = true
+reload = true
+accesslog = -
+loglevel = debug
 listen = *:6543
 
 ###
