change configurations and stuff

--- a/end-to-end-server-stuffs/server-stuffs/development.ini
+++ b/end-to-end-server-stuffs/server-stuffs/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:server-stuffs
+use = egg:server_stuffs
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -26,13 +26,14 @@ sqlalchemy.url = sqlite:///%(here)s/server-stuffs.sqlite
 
 [server:main]
 use = egg:gunicorn#main
-bind = unix:/var/run/app.sock
+host = localhost
+port = 8000
 workers = 3
 preload = true
 reload = true
 accesslog = -
 loglevel = debug
-listen = localhost:6543
+listen = localhost:8000
 
 ###
 # logging configuration
