Add tasklist and task models and views

--- a/end-to-end-server-stuffs/server-stuffs/development.ini
+++ b/end-to-end-server-stuffs/server-stuffs/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/server-stuffs.sqlite
+sqlalchemy.url = postgres://devuser:devpass@localhost:5432/devdb
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
@@ -25,14 +25,7 @@ sqlalchemy.url = sqlite:///%(here)s/server-stuffs.sqlite
 ###
 
 [server:main]
-use = egg:gunicorn#main
-host = localhost
-port = 8000
-workers = 3
-preload = true
-reload = true
-accesslog = -
-loglevel = debug
+use = egg:waitress#main
 listen = localhost:8000
 
 ###
