change backslashes to forwardslashes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ before_script:
 
 run-test:
   script:
-    - pytest server_stuffs\tests
+    - pytest server_stuffs/tests
 
 update-server:
   only:
