try the dot thing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ before_script:
 
 run-test:
   script:
-    - pytest "end-to-end/server-stuffs/server_stuffs/tests"
+    - pytest ./end-to-end/server-stuffs/server_stuffs/tests
 
 update-server:
   only:
