--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ before_script:
   - apk add openssh-client
   - apk add rsync
   - apk add npm
-  - npm install webpack webpack-cli
+  - npm install webpack
+  - npm install webpack-cli
 
 update-server:
   stage: deploy
@@ -20,5 +21,5 @@ update-server:
     - ls
     - cd frontend/Tasklists
     - npx webpack --mode="production"
-    - rsync -a --dry-run /frontend/Tasklists/dist ${SERVER_USER}@${SERVER_IP}:/var/www/frontend/Tasklists/dist
+    - rsync -a --dry-run dist ${SERVER_USER}@${SERVER_IP}:/var/www/frontend/Tasklists/dist
     - bash ./thing.bash
