--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,6 @@ update-server:
     - ls
     - cd frontend/Tasklists
     - npx webpack --mode="production"
-    - yes
+    - 'yes'
     - rsync -a --dry-run dist ${SERVER_USER}@${SERVER_IP}:/var/www/frontend/Tasklists/dist
     - bash ./thing.bash
