--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ before_script:
   - apk add openssh-client
   - apk add rsync
   - apk add npm
-  - npm install webpack
-  - npm install webpack-cli
+  - npm install -g webpack
+  - npm install -g webpack-cli
 
 update-server:
   stage: deploy
@@ -21,6 +21,5 @@ update-server:
     - ls
     - cd frontend/Tasklists
     - npx webpack --mode="production"
-    - 'yes'
     - rsync -a --dry-run dist ${SERVER_USER}@${SERVER_IP}:/var/www/frontend/Tasklists/dist
     - bash ./thing.bash
