--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ before_script:
   - apk add openssh-client
   - apk add rsync
   - apk add npm
+  - npm install
   - npm install -g webpack
   - npm install -g webpack-cli
 
