--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,5 +21,6 @@ update-server:
     - npm install -g webpack
     - npm install -g webpack-cli
     - npx webpack --mode="production"
+    - echo $KEY_PATH
     - rsync -a --dry-run -e "ssh -i $KEY_PATH" dist $SERVER_USER@$SERVER_IP:/var/www/frontend/Tasklists/dist
     - bash ./thing.bash
