Fiddling with image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,3 +26,5 @@ update-server:
     - rsync -a -e "ssh -i $KEY_PATH" frontend/Tasklists/dist/ $SERVER_USER@$SERVER_IP:/var/www/frontend/Tasklists/dist
     - cd /
     - ls
+    - cd home
+    - ls
