Add forgoten dash to changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build-js:
   stage: deploy
   only:
     changes:
-      frontend/Tasklists/src/**/*
+      - frontend/Tasklists/src/**/*
   script:
     - cd frontend/Tasklists
     - npm install
