--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,3 +24,23 @@ update-server:
     - cd ../
     - bash ./thing.bash
     - rsync -a -e "ssh -i $KEY_PATH" frontend/dist/ $SERVER_USER@$SERVER_IP:/var/www/frontend/dist
+
+build-js:
+  stage: build
+  only:
+    - master
+    changes:
+      - frontend/src/**/*
+  script:
+    - mkdir .ssh
+    - chmod 700 .ssh
+    - echo "$PRIV_KEY" | tr -d '\r' > .ssh/id_rsa
+    - chmod 600 .ssh/id_rsa
+    - cd frontend/
+    - npm install
+    - npm install -g webpack
+    - npm install -g webpack-cli
+    - npx webpack --mode="production"
+    - cd ../
+    - ssh -i $KEY_PATH $SERVER_USER@$SERVER_IP
+    - rsync -a -e "ssh -i $KEY_PATH" frontend/dist/ $SERVER_USER@$SERVER_IP:/var/www/frontend/dist
