Use refs to define which branch build-js should run for

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,8 @@ update-server:
 build-js-update-server:
   stage: build
   only:
-    - master
+    refs:
+      - master
     changes:
       - frontend/src/**/*
   script:
