--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,7 @@ build-js-update-server:
     - echo "$PRIV_KEY" | tr -d '\r' > .ssh/id_rsa
     - chmod 600 .ssh/id_rsa
     - cd frontend/
+    - npm --version
     - npm install
     - npm install -g webpack
     - npm install -g webpack-cli
