--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ before_script:
   - apk add bash
   - apk add openssh-client
   - apk add rsync
-  - apk add --update npm
+  - apk add npm
 
 update-server:
   stage: deploy
