--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
-image: alpine:latest
 before_script:
   - apk update
   - apk upgrade
   - apk add bash
   - apk add openssh-client
   - apk add rsync
-  - apk add npm=6.13.0
+  - apk add npm
 
 update-server:
   stage: deploy
