--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 before_script:
   - apt-get update
   - apt-get upgrade
-  - apt-get install bash
-  - apt-get install openssh-client
-  - apt-get install rsync
-  - apt-get install npm
+  - apt-get -y install bash
+  - apt-get -y install openssh-client
+  - apt-get -y install rsync
+  - apt-get -y install npm
 
 update-server:
   stage: deploy
