curl version 12.x of node.js, change comment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 before_script:
   - apt-get update
   - apt-get upgrade
-  - apt-get -y install bash
-  - apt-get -y install openssh-client
-  - apt-get -y install rsync
-  - apt-get -y install npm
+  - apt-get install -y bash
+  - apt-get install -y openssh-client
+  - apt-get install -y rsync
+  - curl -sL https://dev.nodesource.com/setup_12.x | bash -
+  - apt-get install -y nodejs
 
 update-server:
   stage: deploy
