--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,7 @@ build-js-update-server:
     - echo "$PRIV_KEY" | tr -d '\r' > .ssh/id_rsa
     - chmod 600 .ssh/id_rsa
     - cd frontend/
+    - npm config set registry http://registry.npmjs.org
     - npm --version
     - npm install --verbose
     - npm install -g webpack
