--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ build-js-update-server:
     - chmod 600 .ssh/id_rsa
     - cd frontend/
     - npm --version
+    - npm cache clean
     - npm install --verbose
     - npm install -g webpack
     - npm install -g webpack-cli
