--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.1.2",
+    "reaptcha": "^1.7.0",
     "redux": "^4.0.4"
   },
   "scripts": {
