Add verifyRecaptchaToken utility function

--- a/end-to-end-server-stuffs/server-stuffs/development.ini
+++ b/end-to-end-server-stuffs/server-stuffs/development.ini
@@ -16,6 +16,8 @@ pyramid.includes =
 
 sqlalchemy.url = postgres://devuser:devpass@localhost:5432/devdb
 
+# Testing secret key
+recaptcha_secret = 6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
