--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ build-js-update-server:
     - chmod 600 .ssh/id_rsa
     - cd frontend/
     - npm --version
-    - npm install --loglevel silly --cache /tmp/empty-cache
+    - npm install
     - npm install -g webpack
     - npm install -g webpack-cli
     - npx webpack --mode="production"
